--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Bookshelf API",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start-dev": "nodemon ./src/server.js",
+    "start": "NODE_ENV=production node ./src/server.js",
+    "lint": "eslint ./src"
   },
   "repository": {
     "type": "git",
@@ -24,5 +26,15 @@
   "bugs": {
     "url": "https://github.com/sodiqardianto/bookshelf-app-back-end/issues"
   },
-  "homepage": "https://github.com/sodiqardianto/bookshelf-app-back-end#readme"
+  "homepage": "https://github.com/sodiqardianto/bookshelf-app-back-end#readme",
+  "devDependencies": {
+    "eslint": "^8.50.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "@hapi/hapi": "^21.3.2",
+    "nanoid": "^3.3.6"
+  }
 }
